--- a/i18n/pt/docusaurus-plugin-content-docs/current/wayland-compositors/hyprland.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/wayland-compositors/hyprland.mdx
@@ -557,7 +557,7 @@ workspace = HDMI-A-1,2
 <details>
 <summary><b>Por que o Alacritty não está funcionando no meu computador?</b></summary>
 
-Desde que o Alacritty é um emulador de terminal baseado em OpenGL, ele pode não funcionar em alguns hardwares. Você pode fazê-lo funcionar nestes computadores seguindo esses métodos:
+Como o Alacritty é um emulador de terminal baseado em OpenGL, ele pode não funcionar em alguns hardwares. Você pode fazê-lo funcionar nestes computadores seguindo esses métodos:
 
 1. Abra o alacritty com a variável **LIBGL_ALWAYS_SOFTWARE=1**. Edite o atalho/script que lança o alacritty e substitua `alacritty` por `LIBGL_ALWAYS_SOFTWARE=1 alacritty`
 2. Edite o arquivo **/usr/share/applications/Alacritty.desktop** e substitua `Exec=alacritty` por `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`
