--- a/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/stacking-wm/2bwm.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/stacking-wm/2bwm.mdx
@@ -23,243 +23,244 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<!-- Add your stuff after this -------------------- -->
+<!-- Adicione suas coisas depois disso -------------------- -->
 
-2bwm is a fast floating WM, with the particularity of having 2 borders, written over the XCB library and derived from mcwm written by Michael Cardell. In 2bwm everything is accessible from the keyboard but a pointing device can be used for move, resize and raise/lower.
+O 2bwm é um gerenciador de janelas (WM) rápido e leve, com a particularidade de possuir duas bordas. Ele foi desenvolvido utilizando a biblioteca XCB e é derivado do mcwm, criado por Michael Cardell. No 2bwm, tudo é acessível pelo teclado, mas também é possível usar um dispositivo apontador para mover, redimensionar e elevar/baixar as janelas.
 
 ![img](https://raw.githubusercontent.com/archcraft-os/misc-files/main/screenshots/2bwm/main.png)
 
-<!-- Installation --------------------------------- -->
+<!-- Instalação --------------------------------- -->
 
-## Installation
+## Instalação
 
-Once you finish installing Archcraft, **2bwm** can be installed on the top of it. It's pre-configured and ready to go. Open a terminal and run the following command to install 2bwm :
+Após concluir a instalação do Archcraft, o **2bwm** pode ser instalado sobre ele. O gerenciador já vem pré-configurado e pronto para uso. Abra um terminal e execute o seguinte comando para instalar o 2bwm:  
 ```bash
 $ sudo pacman -Sy archcraft-2bwm
 ```
 
-<!-- Configuration -------------------------------- -->
+<!-- Configuração -------------------------------- -->
 
-## Configuration
+## Configuração
 
-2bwm is pre-configured in Archcraft. In this section, We'll see how the 2bwm window manager is configured, what tools and utilities are used to make it look and work like a complete desktop environment.
+O **2bwm** já vem pré-configurado no Archcraft. Nesta seção, veremos como o gerenciador de janelas 2bwm é configurado, quais ferramentas e utilitários são utilizados para fazê-lo se parecer e funcionar como um ambiente de desktop completo.
 
-### Config Structure
+### Estrutura de Configuração
 
-The configuration structure of 2bwm in Archcraft looks something like this:
+A estrutura de configuração do **2bwm** no Archcraft é semelhante a esta:
 
 ```
 /opt
-└── 2bwm-source               : 2bwm source code
-    └── config.h              : 2bwm config file
+└── 2bwm-source               : Código-fonte do 2bwm
+    └── config.h              : Arquivo de configuração do 2bwm
 /usr
 └── share
     └── archcraft
         └── 2bwm
-            ├── alacritty     : terminal config
-            ├── scripts       : scripts used for 2bwm
-            ├── theme         : desktop theme (polybar, rofi configs) 
-            ├── dunstrc       : dunst config for notifications
-            ├── picom.conf    : compositor config
-            └── xsettingsd    : gtk themes, icons and fonts config file
+            ├── alacritty     : Configuração do terminal
+            ├── scripts       : Scripts utilizados pelo 2bwm
+            ├── theme         : Tema do desktop (configurações do polybar e rofi)
+            ├── dunstrc       : Configuração do dunst para notificações
+            ├── picom.conf    : Configuração do compositor
+            └── xsettingsd    : Arquivo de configuração para temas GTK, ícones e fontes
 ```
 
 ### Terminal
 
-**Alacritty** is the default terminal. In 2bwm window manager, alacritty is launched with an alternative config file. If you need to change anything, make sure you modify the config files in `/usr/share/archcraft/2bwm/alacritty` directory. These are the following config files you can modify to change the behaviour of your terminal:
+O **Alacritty** é o terminal padrão. No gerenciador de janelas 2bwm, o Alacritty é iniciado com um arquivo de configuração alternativo. Se precisar alterar algo, certifique-se de modificar os arquivos de configuração no diretório `/usr/share/archcraft/2bwm/alacritty`. Estes são os arquivos de configuração que você pode alterar para modificar o comportamento do terminal:
 
-**`/usr/share/archcraft/2bwm/alacritty/alacritty.toml`** : Main configuration file <br/>
-**`/usr/share/archcraft/2bwm/alacritty/colors.toml`** : Colors configurations <br/>
-**`/usr/share/archcraft/2bwm/alacritty/fonts.toml`** : Fonts configurations
+**`/usr/share/archcraft/2bwm/alacritty/alacritty.toml`**: Arquivo principal de configuração <br/>
+**`/usr/share/archcraft/2bwm/alacritty/colors.toml`**: Configurações de cores <br/>
+**`/usr/share/archcraft/2bwm/alacritty/fonts.toml`**: Configurações de fontes
 
-> If you need any help with alacritty config, run : `man 5 alacritty` in terminal.
+> Se precisar de ajuda com a configuração do Alacritty, execute: `man 5 alacritty` no terminal.
 
-### Notification
+### Notificações
 
-**Dunst** is used as a notification daemon for notifications in 2bwm. In 2bwm window manager, dunst is launched with an alternative config file, which is `/usr/share/archcraft/2bwm/dunstrc`. So, If you need to modify anything, make sure you edit this file.
+O **Dunst** é utilizado como daemon de notificações no 2bwm. No gerenciador de janelas 2bwm, o Dunst é iniciado com um arquivo de configuração alternativo, localizado em `/usr/share/archcraft/2bwm/dunstrc`. Portanto, se precisar modificar algo, edite este arquivo.
 
-> If you need any help with dunst config, run : `man 5 dunst` in terminal.
+> Se precisar de ajuda com a configuração do Dunst, execute: `man 5 dunst` no terminal.
 
-### Wallpaper
+### Papel de Parede
 
-**hsetroot** sets the wallpaper in the 2bwm. If you want to change the wallpaper, Edit `/usr/share/archcraft/2bwm/scripts/2bwm_autostart` script and add the path to your wallpaper :
+O **hsetroot** é usado para definir o papel de parede no 2bwm. Se você deseja alterar o papel de parede, edite o script `/usr/share/archcraft/2bwm/scripts/2bwm_autostart` e adicione o caminho para o seu papel de parede:  
 ```bash
-# Restore wallpaper
+# Restaurar papel de parede
 hsetroot -cover '/path/to/your/wallpaper'
 ```
 
-### Statusbar
+### Barra de Status
 
-**Polybar** is used as the statusbar in Archcraft's 2bwm window manager.
+O **Polybar** é usado como a barra de status no gerenciador de janelas 2bwm do Archcraft.
 
-The configurations for polybar can be found inside the _theme_ directory directory of 2bwm `/usr/share/archcraft/2bwm/theme`
+As configurações do Polybar estão localizadas no diretório _theme_ do 2bwm: `/usr/share/archcraft/2bwm/theme`.
 
-If you want to modify the **polybar** settings, or perhaps want to add/remove modules, then you need to edit the following files :
+Se você deseja modificar as configurações do **Polybar** ou adicionar/remover módulos, será necessário editar os seguintes arquivos:
 
-**`/usr/share/archcraft/2bwm/theme/polybar/config.ini`** : Main config file <br/>
-**`/usr/share/archcraft/2bwm/theme/polybar/colors.ini`** : Colors config file <br/>
-**`/usr/share/archcraft/2bwm/theme/polybar/modules.ini`** : Modules config file
+**`/usr/share/archcraft/2bwm/theme/polybar/config.ini`**: Arquivo principal de configuração <br/>
+**`/usr/share/archcraft/2bwm/theme/polybar/colors.ini`**: Arquivo de configuração de cores <br/>
+**`/usr/share/archcraft/2bwm/theme/polybar/modules.ini`**: Arquivo de configuração de módulos
 
-> If you need any help with polybar config, visit : [polybar wiki](https://github.com/polybar/polybar/wiki)
+> Se precisar de ajuda com a configuração do Polybar, visite: [Polybar Wiki](https://github.com/polybar/polybar/wiki)
 
-### Launchers and Applets
+### Launchers e Applets
 
-**Rofi** is used for application launchers, command runner and various applets. To modify the rofi config, edit `~/.config/rofi/config.rasi` file.
+O **Rofi** é utilizado como lançador de aplicativos, executor de comandos e para vários applets. Para modificar a configuração do Rofi, edite o arquivo `~/.config/rofi/config.rasi`.
 
-> If you need any help with rofi config, run : `man rofi` in terminal.
+> Se precisar de ajuda com a configuração do Rofi, execute: `man rofi` no terminal.
 
-The scripts for rofi that are used in 2bwm can be found it `/usr/share/archcraft/2bwm/scripts` directory. These are the following scripts that uses rofi to provide the launchers and applets :
+Os scripts do Rofi usados no 2bwm estão localizados no diretório `/usr/share/archcraft/2bwm/scripts`. Estes são os scripts disponíveis que utilizam o Rofi para fornecer os launchers e applets:
 
-**`rofi_askpass`** : rofi based `sudo` frontend to get root password <br/>
-**`rofi_asroot`** : applet to open apps as root <br/>
-**`rofi_bluetooth`** : bluetooth applet to quickly connect to BT devices <br/>
-**`rofi_launcher`** : an application launcher, cmd runner, file manager and task manager  <br/>
-**`rofi_music`** : music applet, that controls MPD with `mpc` <br/>
-**`rofi_powermenu`** : power menu, with confirmation dialog <br/>
-**`rofi_runner`** : quickly lets you run a command <br/>
-**`rofi_screenshot`** : screenshot applet that works with maim <br/>
+**`rofi_askpass`**: Interface baseada no Rofi para `sudo`, solicitando a senha de root <br/>
+**`rofi_asroot`**: Applet para abrir aplicativos como root <br/>
+**`rofi_bluetooth`**: Applet para conexão rápida a dispositivos Bluetooth <br/>
+**`rofi_launcher`**: Lançador de aplicativos, executor de comandos, gerenciador de arquivos e de tarefas <br/>
+**`rofi_music`**: Applet de música que controla o MPD com o `mpc` <br/>
+**`rofi_powermenu`**: Menu de energia com diálogo de confirmação <br/>
+**`rofi_runner`**: Executor de comandos rápidos <br/>
+**`rofi_screenshot`**: Applet para capturas de tela que utiliza o maim <br/>
 
-If you want to modify any applet or perhaps want to extend the functionality of the applet, just edit these scripts above.
+Se você deseja modificar algum applet ou estender sua funcionalidade, basta editar os scripts mencionados acima.
 
-The configuration of each script can be found inside the _theme_ directory of 2bwm `/usr/share/archcraft/2bwm/theme`
+A configuração visual de cada script pode ser encontrada no diretório _theme_ do 2bwm: `/usr/share/archcraft/2bwm/theme`.
 
-Let's say you want to modify the looks of **launcher**, then you need to edit the `/usr/share/archcraft/2bwm/theme/rofi/launcher.rasi` file. Same goes for every other applet, Edit the respective file in the same directory.
+Por exemplo, se você deseja modificar a aparência do **launcher**, edite o arquivo `/usr/share/archcraft/2bwm/theme/rofi/launcher.rasi`. O mesmo vale para os outros applets; edite o arquivo correspondente no mesmo diretório.
 
-> If you need any help with rofi theming, run : `man rofi-theme` in terminal.
+> Se precisar de ajuda com a personalização do tema do Rofi, execute: `man rofi-theme` no terminal.
 
-To change the colors and fonts of the launchers and applets, Edit the `/usr/share/archcraft/2bwm/theme/rofi/shared/colors.rasi` and `/usr/share/archcraft/2bwm/theme/rofi/shared/fonts.rasi` files.
+Para alterar as cores e fontes dos launchers e applets, edite os arquivos `/usr/share/archcraft/2bwm/theme/rofi/shared/colors.rasi` e `/usr/share/archcraft/2bwm/theme/rofi/shared/fonts.rasi`.
 
 ### Compositor
 
-**Picom** is used for compositing. It's a lightweight compositor with shadowing, advanced blurring and fading. In 2bwm, picom is launched with an alternative config file, which is `/usr/share/archcraft/2bwm/picom.conf`. 
+O **Picom** é utilizado para composição. Ele é um compositor leve que oferece sombreamento, desfoque avançado e efeitos de transição. No 2bwm, o Picom é iniciado com um arquivo de configuração alternativo localizado em `/usr/share/archcraft/2bwm/picom.conf`.
 
-If you need to change anything related to picom, Edit this picom config file.
+Se precisar alterar algo relacionado ao Picom, edite esse arquivo de configuração.
 
-> If you need any help with picom config, check the picom's default config file in `/etc/xdg/picom.conf`
+> Se precisar de ajuda com a configuração do Picom, consulte o arquivo de configuração padrão em `/etc/xdg/picom.conf`.
 
 :::info
 
-If you're having screen-tearing issues, using `glx` backend can solve this issue. <br/>
-If you're facing lagging, hangs and freezes, try switching between `xrender` and `glx` backend.  
+Se você estiver enfrentando problemas de screen-tearing, usar o backend `glx` pode resolver o problema.  
+Caso enfrente lentidão, travamentos ou congelamentos, experimente alternar entre os backends `xrender` e `glx`.
 
 :::
 
-### Window Manager
+### Gerenciador de Janelas
 
-`/opt/2bwm-source/config.h` is the main configuration file of 2bwm. If you need to change anything or perhaps you want to add/remove/change keybindings, Edit this file and recompile 2bwm and then install the new binary.
+O arquivo **`/opt/2bwm-source/config.h`** é o arquivo principal de configuração do 2bwm. Se você precisar alterar algo, ou se deseja adicionar/remover/alterar as teclas de atalho, edite este arquivo, recompile o 2bwm e, em seguida, instale o novo binário.
 
-> If you need any help with 2bwm configuration and customisation, run : `man 2bwm`
+> Se precisar de ajuda com a configuração e personalização do 2bwm, execute: `man 2bwm` no terminal.
 
-<!-- Keybindings ---------------------------------- -->
+<!-- Atalhos de teclado ---------------------------------- -->
 
-## Keybindings
+## Atalhos de teclado
 
-Here's a list of some important keybinds you need to know for operating 2bwm easily. If you want to view, modify or add new keybinds, Edit `/opt/2bwm-source/config.h` file.
+Aqui está uma lista de alguns atalhos de teclado importantes que você precisa conhecer para operar o 2bwm com facilidade. Se você deseja visualizar, modificar ou adicionar novos atalhos, edite o arquivo `/opt/2bwm-source/config.h`.
 
-### Applications
+### Aplicativos
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + Return</kbd> | Open terminal (alacritty) |
-| <kbd>super + shift + Return</kbd> | Open fullscreen terminal |
-| <kbd>super + F</kbd> | Open file manager (thunar) |
-| <kbd>super + E</kbd> | Open text editor (geany) |
-| <kbd>super + W</kbd> | Open web browser (firefox) |
+| <kbd>super + Return</kbd> | Abre o terminal (alacritty) |
+| <kbd>super + shift + Return</kbd> | Abre o terminasl em tela cheia |
+| <kbd>super + F</kbd> | Abre o gerenciador de arquivos (thunar) |
+| <kbd>super + E</kbd> | Abre o editor de texto (geany) |
+| <kbd>super + W</kbd> | Abre o navegador (firefox) |
 
-### Menu and Applets
+### Menu e Applets
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super</kbd> | Open application launcher |
-| <kbd>alt + F1</kbd> | Open application launcher |
-| <kbd>alt + F2</kbd> | Open command runner |
-| <kbd>super + N</kbd> | Open network manager applet |
-| <kbd>super + B</kbd> | Open bluetooth applet |
-| <kbd>super + M</kbd> | Open music applet |
-| <kbd>super + X</kbd> | Open powermenu applet |
-| <kbd>super + S</kbd> | Open screenshots applet |
-| <kbd>super + R</kbd> | Open apps as root applet |
+| <kbd>super</kbd> | Abre o lançador de aplicativos |
+| <kbd>alt + F1</kbd> | Abre o lançador de aplicativos |
+| <kbd>alt + F2</kbd> | Abre o executor de comandos |
+| <kbd>super + N</kbd> | Abre o applet de gerenciamento de conexão |
+| <kbd>super + B</kbd> | Abre o applet de bluetooth |
+| <kbd>super + M</kbd> | Abre o applet de música |
+| <kbd>super + X</kbd> | Abre o applet de menu de energia |
+| <kbd>super + S</kbd> | Abre o applet de screenshots |
+| <kbd>super + R</kbd> | Abre o applet para abrir como root |
 
-### Hardware Keys
+### Atalhos de Hardware
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>Print</kbd> | Take screenshot |
-| <kbd>alt + Print</kbd> | Take screenshot in 5 seconds delay |
-| <kbd>shift + Print</kbd> | Take screenshot in 10 seconds delay |
-| <kbd>ctrl + Print</kbd> | Take screenshot of currently focused window |
-| <kbd>super + Print</kbd> | Take screenshot of selected area |
-| <kbd>XF86AudioRaiseVolume</kbd> | Increase volume |
-| <kbd>XF86AudioLowerVolume</kbd> | Decrease volume |
-| <kbd>XF86AudioMute</kbd> | Toggle mute speakers |
-| <kbd>XF86AudioMicMute</kbd> | Toggle mute microphone |
-| <kbd>XF86MonBrightnessUp</kbd> | Increase display brightness |
-| <kbd>XF86MonBrightnessDown</kbd> | Decrease display brightness |
+| <kbd>Print</kbd> | Tira um screenshot |
+| <kbd>alt + Print</kbd> | Tira um screenshot com 5 segundos de espera |
+| <kbd>shift + Print</kbd> | Tira um screenshot com 10 segundos de espera |
+| <kbd>ctrl + Print</kbd> | Tira um screenshot da janela em foco |
+| <kbd>super + Print</kbd> | Tira um screenshot da área selecionada |
+| <kbd>XF86AudioRaiseVolume</kbd> | Ayumenta o vomlume |
+| <kbd>XF86AudioLowerVolume</kbd> | Diminui o volume |
+| <kbd>XF86AudioMute</kbd> | Alterna o mudo nos auto-falantes |
+| <kbd>XF86AudioMicMute</kbd> | Alterna o mudo do microfone |
+| <kbd>XF86MonBrightnessUp</kbd> | Aumenta o brilho da tela |
+| <kbd>XF86MonBrightnessDown</kbd> | Diminui o brilho da tela |
 
-### Workspaces
-| Keys | Action |
+### Áreas de Trabalho
+
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + 1..9,0</kbd> | Switch to respective workspace |
-| <kbd>super + ctrl + Right/Left</kbd> | Next/Previous workspace |
-| <kbd>super + ctrl + shift + Right/Left</kbd> | Move window to Next/Previous workspace |
-| <kbd>super + Comma/Period</kbd> | Next/Previous screen |
+| <kbd>super + 1..9,0</kbd> | Troca para a respectiva área de trabalho |
+| <kbd>super + ctrl + Right/Left</kbd> | Área de trabalho seguinte/anterior |
+| <kbd>super + ctrl + shift + Right/Left</kbd> | Move a janela para a área de trabalho seguinte/anterior |
+| <kbd>super + Comma/Period</kbd> | Tela seguinte/anterior |
 
-### Window Management
+### Gerenciamento de Janela
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + C/Q</kbd> | Close focued window |
-| <kbd>super + Tab</kbd> | Focus to next/previous window |
-| <kbd>super + Up/Down/Left/Right</kbd> | Move window directionally |
-| <kbd>super + shift + Up/Down/Left/Right</kbd> | Resize window directionally |
-| <kbd>super + alt + Left/Right</kbd> | Resize while keeping the window's aspect ratio |
-| <kbd>super + G</kbd> | Teleport the window to center of the screen |
-| <kbd>super + shift + G</kbd> | Teleport the window to centerY of the screen |
-| <kbd>super + ctrl + G</kbd> | Teleport the window to centerX of the screen |
-| <kbd>super + H</kbd> | Teleport the window to Top left of the screen |
-| <kbd>super + K</kbd> | Teleport the window to Top right of the screen |
-| <kbd>super + J</kbd> | Teleport the window to Bottom left of the screen |
-| <kbd>super + L</kbd> | Teleport the window to Bottom right of the screen |
-| <kbd>super + shift + M</kbd> | Maximize window |
-| <kbd>super + shift + F</kbd> | Fullscreen window |
-| <kbd>super + V</kbd> | Maximize vertically |
-| <kbd>super + shift + V</kbd> | Maximize horizontally |
-| <kbd>super + shift + H</kbd> | Maximize and move vertically to the left |
-| <kbd>super + shift + L</kbd> | Maximize and move vertically to the right |
-| <kbd>super + shift + J</kbd> | Maximize and move horizontally to the left |
-| <kbd>super + shift + K</kbd> | Maximize and move horizontally to the right |
-| <kbd>super + shift + ctrl + K</kbd> | Maximize and move : fold half vertically |
-| <kbd>super + shift + ctrl + H</kbd> | Maximize and move : fold half horizontally |
-| <kbd>super + shift + ctrl + J</kbd> | Maximize and move : unfold vertically |
-| <kbd>super + shift + ctrl + L</kbd> | Maximize and move : unfold horizontally |
-| <kbd>super + I</kbd> | Iconify the window |
-| <kbd>super + A</kbd> | Make the window unkillable |
-| <kbd>super + Z</kbd> | Raise or lower a window |
-| <kbd>super + T</kbd> | Make the window appear always on top |
-| <kbd>super + D</kbd> | Make the window stay on all workspaces |
-| <kbd>super + Y</kbd> | Toggle sloppy |
-| <kbd>super + Space</kbd> | Make window half and centered |
+| <kbd>super + C/Q</kbd> | Fecha a janela em foco |
+| <kbd>super + Tab</kbd> | Foca na janela seguinte/anterior |
+| <kbd>super + Up/Down/Left/Right</kbd> | Move a janela direcionalmente |
+| <kbd>super + shift + Up/Down/Left/Right</kbd> | Redimensiona a janela direcionalmente |
+| <kbd>super + alt + Left/Right</kbd> | Redimensiona mantendo a proporção da janela |
+| <kbd>super + G</kbd> | Transporta a janela para o centro da tela |
+| <kbd>super + shift + G</kbd> | Transporta a janela para o centro Y da tela |
+| <kbd>super + ctrl + G</kbd> | Transporta a janela para o centro X da tela |
+| <kbd>super + H</kbd> | Transporta a janela para o canto superior esquerdo da tela |
+| <kbd>super + K</kbd> | Transporta a janela para o canto superior direito da tela |
+| <kbd>super + J</kbd> | Transporta a janela para o canto inferior esquerdo da tela |
+| <kbd>super + L</kbd> | Transporta a janela para o canto inferior direito da tela |
+| <kbd>super + shift + M</kbd> | Maximiza a janela |
+| <kbd>super + shift + F</kbd> | Coloca a janela em tela cheia |
+| <kbd>super + V</kbd> | Maximiza verticalmente |
+| <kbd>super + shift + V</kbd> | Maximiza horizontalmente |
+| <kbd>super + shift + H</kbd> | Maximiza e mover verticalmente para a esquerda |
+| <kbd>super + shift + L</kbd> | Maximiza e mover verticalmente para a direita |
+| <kbd>super + shift + J</kbd> | Maximiza e mover horizontalmente para a esquerda |
+| <kbd>super + shift + K</kbd> | Maximiza e mover horizontalmente para a direita |
+| <kbd>super + shift + ctrl + K</kbd> | Maximiza e mover: dobrar metade verticalmente |
+| <kbd>super + shift + ctrl + H</kbd> | Maximiza e mover: dobrar metade horizontalmente |
+| <kbd>super + shift + ctrl + J</kbd> | Maximiza e mover: expandir verticalmente |
+| <kbd>super + shift + ctrl + L</kbd> | Maximiza e mover: expandir horizontalmente |
+| <kbd>super + I</kbd> | Minimiza a janela |
+| <kbd>super + A</kbd> | Torna a janela imortal (não pode ser fechada) |
+| <kbd>super + Z</kbd> | Eleva ou abaixa uma janela |
+| <kbd>super + T</kbd> | Torna a janela sempre visível acima de outras |
+| <kbd>super + D</kbd> | Torna a janela visível em todas as áreas de trabalho |
+| <kbd>super + Y</kbd> | Alterna modo "sloppy" |
+| <kbd>super + Space</kbd> | Torna a janela metade e centralizada |
 
-### Window Manager
+### Gerenciador de Janela
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + ctrl + R</kbd> | Restart 2bwm |
-| <kbd>super + ctrl + Q</kbd> | Quit 2bwm |
+| <kbd>super + ctrl + R</kbd> | Reinicia o 2bwm |
+| <kbd>super + ctrl + Q</kbd> | Sai do 2bwm |
 
-### Misc Keys
+### Atalhos Variados
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>ctrl + alt + M</kbd> | Open ncmpcpp with album art in terminal |
-| <kbd>ctrl + alt + L</kbd> | Trigger lockscreen |
-| <kbd>super + P</kbd> | Run colorpicker  |
+| <kbd>ctrl + alt + M</kbd> | Abre o ncmpcpp com a arte do álbum no terminal |
+| <kbd>ctrl + alt + L</kbd> | Aciona o bloqueio de tela |
+| <kbd>super + P</kbd> | Executa o seletor de cor |
 
-<!-- Themes --------------------------------------- -->
+<!-- Temas --------------------------------------- -->
 
 ## Screenshots
 
-Here's few screenshots of `2bwm` desktop. These'll give you an idea of the experience of 2bwm in Archcraft. 
+Aqui estão algumas capturas de tela da área de trabalho do **2bwm**. Elas lhe darão uma ideia da experiência do **2bwm** no Archcraft.
 
 |Desktop 1|Desktop 2|Desktop 3|Desktop 4|
 |---|---|---|---|
@@ -278,9 +279,9 @@ Here's few screenshots of `2bwm` desktop. These'll give you an idea of the exper
 ## FAQs
 
 <details>
-<summary><b>How to change GTK theme, icons and cursor?</b></summary>
+<summary><b>Como mudar o tema GTK, ícones e cursor?</b></summary>
 
-To change GTK theme, icons and cursor in 2bwm session, Edit `/usr/share/archcraft/2bwm/xsettingsd` file and restart 2bwm to apply the changes.
+Para mudar o tema GTK, os ícones e o cursor na sessão do 2bwm, edite o arquivo `/usr/share/archcraft/2bwm/xsettingsd` e reinicie o 2bwm para aplicar as mudanças.
 ```bash
 Net/ThemeName "Nordic"
 Net/IconThemeName "Zafiro"
@@ -290,18 +291,18 @@ Gtk/CursorThemeName "Qogirr"
 </details>
 
 <details>
-<summary><b>How to manage multiple monitors and resolution in 2bwm?</b></summary>
+<summary><b>Como gerenciar múltiplos monitores e resoluções no 2bwm?</b></summary>
 
-If you use multiple monitors with 2bwm window manager, you can manage them by running _Manager Monitors_ or `archcraft-randr` app.
+Se você usar múltiplos monitores com o gerenciador de janelas 2bwm, pode gerenciá-los executando o aplicativo _Manager Monitors_ ou `archcraft-randr`.
 
 </details>
 
 <details>
-<summary><b>Why Alacritty is not working on my computer?</b></summary>
+<summary><b>Por que o Alacritty não está funcionando no meu computador?</b></summary>
 
-Since Alacritty is a OpenGL based terminal emulator, It may not work on some computer hardwares. You can make it work on such computers by following these methods :
+Como o Alacritty é um emulador de terminal baseado em OpenGL, ele pode não funcionar em alguns hardwares de computador. Você pode fazê-lo funcionar nesses computadores seguindo estes métodos:
 
-1. Open alacritty with **LIBGL_ALWAYS_SOFTWARE=1** variable. Edit the keybindings/script launching alacritty and replace `alacritty` with `LIBGL_ALWAYS_SOFTWARE=1 alacritty`
-2. Edit **/usr/share/applications/Alacritty.desktop** desktop file and replace `Exec=alacritty` with `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`
+1. Abra o Alacritty com a variável **LIBGL_ALWAYS_SOFTWARE=1**. Edite os atalhos de teclado ou o script que inicia o Alacritty e substitua `alacritty` por `LIBGL_ALWAYS_SOFTWARE=1 alacritty`.
+2. Edite o arquivo de área de trabalho **/usr/share/applications/Alacritty.desktop** e substitua `Exec=alacritty` por `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`.
 
 </details>
